--- a/Data/WebContent/index.html
+++ b/Data/WebContent/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
 <body>
+<form action="idade">
 
+Digite a data do seu aniversario : <input type="text" name="dataUsuario"><br>
+
+<input type="submit">
+
+</form>
 </body>
 </html>
