--- a/Data/WebContent/index.html
+++ b/Data/WebContent/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="pt-br">
+<head>
+ <title> HTML
+   </title>
+     <meta charset= "UTF-8"/>
+   <style>
+h1{
+    font-family: Arial;
+    font-size: 30p;
+    color: red;
+   }
+   </style>
+</head>
+
 <body>
-<form action="idade">
-
-Digite a data do seu aniversario : <input type="text" name="dataUsuario"><br>
-
-<input type="submit">
-
+<h1>
+   FORMULÁRIO
+  </h1>
+<form name="formFormulario" action="Data" method="post">   
+       <label for="">Nome:</label>
+           <input type= "text" required="required" placeholder ="Nome" name="nome"/><br>
+       
+       <br><label for="">Data De Nascimento:</label>
+           <input type= "text" required="required" placeholder ="Informe Data de Nascimento" name="num"/>
+             <input type="submit" name="ENVIAR"value="ENVIAR"/>
 </form>
-</body>
-</html>
+    </body>
